---
source: src/tests/store_parsing.rs
expression: acquire_errors
---
  × Your cargo-vet store (supply-chain) has consistency errors

Error: 
  × 'oops' is not a valid criteria name
    ╭─[config.toml:22:12]
 21 │ version = "1.0.0"
 22 │ criteria = "oops"
    ·            ──────
 23 │ 
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'bad' is not a valid criteria name
    ╭─[config.toml:16:12]
 15 │ [policy.serde]
 16 │ criteria = "bad"
    ·            ─────
 17 │ dev-criteria = "nope"
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'nope' is not a valid criteria name
    ╭─[config.toml:17:16]
 16 │ criteria = "bad"
 17 │ dev-criteria = "nope"
    ·                ──────
 18 │ dependency-criteria = { clap = ["safe-to-run", "unsafe-for-all", "good"], serde_derive = "nada" }
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'unsafe-for-all' is not a valid criteria name
    ╭─[config.toml:18:48]
 17 │ dev-criteria = "nope"
 18 │ dependency-criteria = { clap = ["safe-to-run", "unsafe-for-all", "good"], serde_derive = "nada" }
    ·                                                ────────────────
 19 │ 
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]

Error: 
  × 'nada' is not a valid criteria name
    ╭─[config.toml:18:90]
 17 │ dev-criteria = "nope"
 18 │ dependency-criteria = { clap = ["safe-to-run", "unsafe-for-all", "good"], serde_derive = "nada" }
    ·                                                                                          ──────
 19 │ 
    ╰────
  help: the possible criteria are ["good", "safe-to-run", "safe-to-deploy"]
